View corrigida em função do deploy

--- a/views/index.html
+++ b/views/index.html
@@ -26,7 +26,7 @@
 <body>
     <header class="header">
 
-        <a href="index.html" class="logo">
+        <a href="" class="logo">
             <span class="tower3"></span>
             <span class="letter">AJuDE</span>
             <span class="tower3"></span>
@@ -38,7 +38,7 @@
         <ul id="menu" class="menu">
             <li></li>
             <li><button class="btn-quaternary" onclick="window.location.href='ranking.html'">Ordenaçao</button></li>
-            <li><button class="btn-quaternary" onclick="window.location.href='index.html'">Home</button></li>
+            <li><button class="btn-quaternary" onclick="window.location.href=''">Home</button></li>
             <li id="btn-login" class=""><button class="btn-quaternary"
                     onclick="document.getElementById('id01').style.display='block'" data-toggle="pill">Login</button>
             </li>
