--- a/views/campanha.html
+++ b/views/campanha.html
@@ -25,7 +25,7 @@
     <script>
         if (localStorage.getItem("token") == null || localStorage.getItem("token") == "") {
             alert("Token nao localizado ou expirado. Faça login para continuar.")
-            window.location.href = "index.html";
+            window.location.href = "";
         }
     </script>
 </head>
@@ -33,7 +33,7 @@
 <body>
     <header class="header">
 
-        <a href="index.html" class="logo">
+        <a href="" class="logo">
             <span class="tower3"></span>
             <span class="letter">AJuDE</span>
             <span class="tower3"></span>
@@ -44,7 +44,7 @@
         <ul id="menu" class="menu">
             <li></li>
             <li><button class="btn-quaternary" onclick="window.location.href='ranking.html'">Ordenaçao</button></li>
-            <li><button class="btn-quaternary" onclick="window.location.href='index.html'">Home</button></li>
+            <li><button class="btn-quaternary" onclick="window.location.href=''">Home</button></li>
             <li id="btn-login" class=""><button class="btn-quaternary"
                     onclick="document.getElementById('id01').style.display='block'" data-toggle="pill">Login</button>
             </li>
