Correção no formulário de cadastro de campanha.

--- a/views/index.html
+++ b/views/index.html
@@ -154,10 +154,8 @@
                         id="register-Cdescricao" required>
                     <input class="w3-input w3-border w3-margin-bottom" type="number" placeholder="Meta"
                         id="register-Cmeta" required>
-                    <input class="w3-input w3-border w3-margin-bottom" type="number" placeholder="DeadLine"
+                    <input class="w3-input w3-border w3-margin-bottom" type="date" placeholder="Data de Término"
                         id="register-Cdeadline" required>
-                    <input class="w3-input w3-border" type="text" placeholder="Nome curto"
-                        id ="register-Cnomecurto" required>
                     <button class="w3-button-sub" type="submit">Cadastrar</button>
                 </div>
             </form>
