Mais uma correção no adiciona Campanha

--- a/views/index.html
+++ b/views/index.html
@@ -116,7 +116,7 @@
                     class="w3-button w3-xlarge w3-hover-red w3-display-topright" title="Close Modal">&times;</span>
             </div>
 
-            <form class="w3-container" id="register" name="register" onsubmit="submitRegister(); return false;">
+            <form class="w3-container" id="registerUser" name="register" onsubmit="submitRegister(); return false;">
                 <h4>Cadastro</h4>
                 <div class="w3-section">
                     <input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Primeiro Nome"
