--- a/views/campanha.html
+++ b/views/campanha.html
@@ -43,7 +43,7 @@
 
         <ul id="menu" class="menu">
             <li></li>
-            <li><button class="btn-quaternary" onclick="window.location.href='ranking.html'">Ordenaçao</button></li>
+            <li><button class="btn-quaternary" onclick="window.location.href='ordenacao.html'">Ordenaçao</button></li>
             <li><button class="btn-quaternary" onclick="window.location.href=''">Home</button></li>
             <li id="btn-login" class=""><button class="btn-quaternary"
                     onclick="document.getElementById('id01').style.display='block'" data-toggle="pill">Login</button>
