--- a/views/ordenacao.html
+++ b/views/ordenacao.html
@@ -9,7 +9,7 @@
     <title>AJuDE - Ordenaçao</title>
 
     <link rel="stylesheet" type="text/css" href="../styles/index.css">
-    <link rel="stylesheet" type="text/css" href="../styles/ranking.css">
+    <link rel="stylesheet" type="text/css" href="../styles/ordenacao.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css"
         integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
@@ -43,7 +43,7 @@
 
         <ul id="menu" class="menu">
             <li></li>
-            <li><button class="btn-quaternary" onclick="window.location.href='ranking.html'">Ordenaçao</button></li>
+            <li><button class="btn-quaternary" onclick="window.location.href='ordenacao.html'">Ordenaçao</button></li>
             <li><button class="btn-quaternary" onclick="window.location.href=''">Home</button></li>
             <li id="btn-login" class=""><button class="btn-quaternary"
                     onclick="document.getElementById('id01').style.display='block'" data-toggle="pill">Login</button>
