Ultimo commit. Consertei o Cadastra campanha.

--- a/views/index.html
+++ b/views/index.html
@@ -47,7 +47,7 @@
             </li>
             <li id="btn-logout"><button class="btn-primary" onclick="logout();" data-toggle="pill">Sair</button>
             </li>
-            <li id="btn-cadastroCampanha"><button class="btn-primary" onclick="document.getElementById('id03').style.display='block';" data-toggle="pill">Cadastrar ampanha</button>
+            <li id="btn-cadastroCampanha"><button class="btn-primary" onclick="document.getElementById('id03').style.display='block';" data-toggle="pill">Cadastrar Campanha</button>
             </li>
 
         </ul>
